# IFT6289_RAG

./: .gitignore  CLAUDE.md  LICENSE  Makefile  PROJECTS.md  README.md  VIDORE.md  pyproject.toml  status.txt
analysis/: README.md  pyproject.toml
analysis/analysis/: __init__.py  easy_hard.py  flips.py  io.py  paired_bootstrap.py  parser_output_stats.py  per_query_type.py  retrieval_value_by_type.py  stream_overlap.py
analysis/results/: easy_hard_bootstrap.csv  easy_hard_summary.csv  flip_clusters.csv  flip_counts.csv  flip_examples.md  paired_bootstrap.csv  parser_stats.csv  parser_stats_summary.csv  per_query_type.csv  retrieval_value.csv  stream_overlap.csv  stream_overlap_summary.csv
answer_generation/: README.md  check_progress.py  pyproject.toml  results_answers.csv  results_answers.csv.back  results_comparison.csv  run_all.sh  run_judge.sh
answer_generation/answer_generation/: analyze.py  config.py  dataset.py  features.py  judge.py  model.py  predict.py  utils.py
answer_generation_no_retrieval/: pyproject.toml  results_answers.csv  run_all.sh  run_judge.sh
answer_generation_no_retrieval/answer_generation_no_retrieval/: __init__.py  analyze.py  config.py  dataset.py  judge.py  model.py  predict.py  utils.py
docs/: mkdocs.yml
docs/docs/: index.md
ift6289_rag/: __init__.py  dataset.py  features.py  model.py  plots.py  utils.py
ift6289_rag/modeling/: predict.py  train.py
notebooks/: 01_dataset.ipynb  02_colembed.ipynb  03_MTEB.ipynb  04_jina_zerank.ipynb
notebooks/results/nvidia__llama-nemotron-colembed-vl-3b-v2/680b47b199f99bc0ec2f4e90ffa583ec0c2e452c/: model_meta.json
poster/: generate_pptx.py  index.html  poster.pptx
textual_extraction/: README.md  main.py  pyproject.toml  run_all.sh
textual_extraction/textual_extraction/: __init__.py  config.py  dataset.py  features.py  model.py
textual_retriever/: README.md  pyproject.toml  results_jina.csv  results_jina_deepseek.csv  results_jina_reranked.csv  results_jina_reranked_deepseek.csv  run_all.sh
textual_retriever/notebooks/: demo.ipynb
textual_retriever/textual_retriever/: __init__.py  config.py  dataset.py  features.py  model.py  predict.py  utils.py
visual_retriever/: README.md  pyproject.toml  results_colembed.csv  run_all.sh
visual_retriever/notebooks/: demo.ipynb
visual_retriever/visual_retriever/: __init__.py  config.py  dataset.py  features.py  model.py  predict.py  utils.py
