[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"


[project]
name = "textual-extraction"
version = "0.1.0"
description = "ViDoRe textual extraction (Deepseek-ocr-2)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "addict>=2.4.0",
    "datasets>=4.6.0",
    "easydict>=1.13",
    "einops>=0.8.2",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "pillow>=12.1.1",
    "python-dotenv>=1.2.1",
    "tokenizers==0.20.3",
    "torch==2.6.0",
    "torchvision>=0.21.0",
    "transformers==4.46.3",
    "typer>=0.24.1",
]
[tool.ruff]
line-length = 99
