[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "visual-retriever"
version = "0.1.0"
description = "ViDoRe visual retriever (ColEmbed / Nemotron)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colpali-engine>=0.3.14",
    "datasets>=4.5.0",
    "loguru",
    "pillow>=12.1.1",
    "python-dotenv",
    "torch>=2.10.0",
    "tqdm",
    "transformers>=5.2.0",
    "typer",
    "visidata>=3.3",
]

[tool.ruff]
line-length = 99
